Fix bug for x/0 cases. Add overflow support for log & history

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,8 @@ main {
 
 #log {
     border-radius: 0.5em 0.5em 0 0;
+    overflow-x: hidden;
+    word-break: break-all;
 }
 
 /* Calculator buttons*/
@@ -168,6 +170,7 @@ h3 {
     margin-bottom: 0.5em;
     overflow-y: scroll;
     overflow-x: hidden;
+    word-break: break-all;
 }
 
 #clear-history {
